# hhxg-top-hhxg-python

./: .gitignore  README.md  SKILL.md  openapi.yaml  pyproject.toml
.github/workflows/: ci.yml  daily-snapshot.yml
examples/: pandas_analysis.py  quick_start.py
references/: data-schema.md
screenshots/: gen_screenshots.py
scripts/: _common.py  calendar.py  fetch_snapshot.py  margin.py  strategy.py
skill/: SKILL.md
skill/references/: data-schema.md  scheduled-fetch.md
skill/scripts/: calendar.py  fetch_snapshot.py  news.py
src/hhxg/: __init__.py  _constants.py  client.py  exceptions.py  formatters.py  mcp_server.py  models.py
tests/: conftest.py  test_client.py  test_formatters.py  test_mcp_server.py  test_models.py
tests/fixtures/: snapshot_v3.json
