[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hhxg"
version = "0.1.0"
description = "A-share daily market snapshot SDK — zero-config, type-safe, AI-native"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "恢恢量化", email = "hi@hhxg.top" },
]
keywords = [
    "A股",
    "stock",
    "quant",
    "finance",
    "market-data",
    "china-stock",
    "sdk",
    "mcp",
    "pydantic",
    "tushare",
    "akshare",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.scripts]
hhxg-mcp = "hhxg.mcp_server:main"

[project.urls]
Homepage = "https://hhxg.top"
Repository = "https://github.com/hhxg-top/hhxg-python"
Documentation = "https://github.com/hhxg-top/hhxg-python#readme"
Issues = "https://github.com/hhxg-top/hhxg-python/issues"
Changelog = "https://github.com/hhxg-top/hhxg-python/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/hhxg"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
